# LogSlayer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
apps/slayerlog/: CMakeLists.txt
code/slayerlog/: CMakeLists.txt  main.cpp
code/slayerlog/commands/: command_palette_controller.cpp  command_palette_controller.hpp  command_palette_model.hpp  command_palette_view.cpp  command_registrar.cpp  command_registrar.hpp
code/slayerlog/timestamp/: timestamp_format_catalog.cpp
code/slayerlog/tracked_sources/: all_tracked_sources.cpp  all_tracked_sources.hpp  tracked_source_base.cpp  tracked_source_base.hpp  tracked_source_factory.cpp  tracked_source_factory.hpp  tracked_source_file.cpp  tracked_source_file.hpp  tracked_source_folder.cpp  tracked_source_folder.hpp
code/slayerlog/watchers/: zstd_file_watcher.cpp
tests/unit_tests/: CMakeLists.txt
tests/unit_tests/slayerlog/: command_palette_controller_tests.cpp  command_registrar_tests.cpp  tracked_source_manager_tests.cpp  tracked_source_tests.cpp
